--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+ul.a {
+  list-style-type: circle;
+}
 
+ul.b {
+  list-style-type: square;
+}
+
+ol.c {
+  list-style-type: upper-roman;
+}
+
+ol.d {
+  list-style-type: lower-alpha;
+}
 </style>
 </head>
 <body>
@@ -32,4 +50,3 @@
 
 </body>
 </html>
-
