--- a/index.html
+++ b/index.html
@@ -1,52 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html>  
+
 <head>
-<style>
-ul.a {
-  list-style-type: circle;
-}
-
-ul.b {
-  list-style-type: square;
-}
-
-ol.c {
-  list-style-type: upper-roman;
-}
-
-ol.d {
-  list-style-type: lower-alpha;
-}
-</style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>HTML/CSS연습</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-
-<h2>Lists</h2>
-<p>Example of unordered lists:</p>
-<ul class="a">
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Coca Cola</li>
-</ul>
-
-<ul class="b">
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Coca Cola</li>
-</ul>
-
-<p>Example of ordered lists:</p>
-<ol class="c">
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Coca Cola</li>
-</ol>
-
-<ol class="d">
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Coca Cola</li>
-</ol>
-
+  <h1>자주 가는 사이트</h1>
+<ul>
+  <li><a href="https://www.naver.com/">네이버</a></li>
+  <li><a href="https://www.youtube.com/?gl=KR">유튜브</a></li>
+  <li><a href="https://www.google.com/">구글</a></li>
+  <li><a href="https://www.twitch.tv/">트위치</a></li>
+  <li><a href="https://maplestory.nexon.com/">메이플스토리</a></li>
 </body>
+
 </html>
