--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
   <h1>Rainbow Six:Siege Operator</h1>
 <ul>
-  <li><a href="https://namu.wiki/w/%EC%8D%A8%EB%A7%88%EC%9D%B4%ED%8A%B8(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">THERMITE</a></li>
-  <li><a href="https://namu.wiki/w/%ED%9E%88%EB%B0%94%EB%82%98(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">HIBANA</a></li>
-  <li><a href="https://namu.wiki/w/%EB%A3%A9(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">ROOK</a></li>
-  <li><a href="https://namu.wiki/w/%ED%8A%B8%EC%9C%84%EC%B9%98(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">TWITCH</a></li>
-  <li><a href="https://namu.wiki/w/%EC%97%90%EC%BD%94(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">ECHO</a></li>
-  <li><a href="https://namu.wiki/w/%EC%A0%9C%EB%A1%9C(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">ZERO</a></li>
-  <li><a href="https://namu.wiki/w/%EC%B9%B4%EC%9D%B4%EB%93%9C">KAID</a></li>
-  <li><a href="https://namu.wiki/w/%EC%98%88%EA%B1%B0(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">JÄGER</a></li>
-  <li><a href="https://namu.wiki/w/%EB%9D%BC%EC%9D%B4%EC%98%A8(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">RION</a></li>
-  <li><a href="https://namu.wiki/w/%EB%8F%84%EA%B9%A8%EB%B9%84(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">DOGGABI</a></li>
-  <li><a href="https://namu.wiki/w/%EC%9E%90%EC%B9%BC(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">JACKAL</a></li>
-  <li><a href="https://namu.wiki/w/%EB%AF%B8%EB%9D%BC(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">MIRA</a></li>
-  <li><a href="https://namu.wiki/w/%EC%97%90%EC%9D%B4%EC%8A%A4(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">ACE</a></li>
-  <li><a href="https://namu.wiki/w/%EB%AA%A8%EC%A7%80(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)">MOZZIE</a></li>
+  <li><a href="https://namu.wiki/w/%EC%8D%A8%EB%A7%88%EC%9D%B4%ED%8A%B8(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#E95B2B;">THERMITE</p></a></li>
+  <li><a href="https://namu.wiki/w/%ED%9E%88%EB%B0%94%EB%82%98(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#D45B54;">HIBANA</p></a></li>
+   <li><a href="https://namu.wiki/w/%EC%97%90%EC%BD%94(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#D45B54;">ECHO</p></a></li>
+  <li><a href="https://namu.wiki/w/%EB%A3%A9(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#687EA9;">ROOK</p></a></li>
+  <li><a href="https://namu.wiki/w/%ED%8A%B8%EC%9C%84%EC%B9%98(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#687EA9;">TWITCH</p></a></li>
+  <li><a href="https://namu.wiki/w/%EC%A0%9C%EB%A1%9C(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#61AC6E;">ZERO</p></a></li>
+  <li><a href="https://namu.wiki/w/%EC%B9%B4%EC%9D%B4%EB%93%9C"><p style="color:#CCB486;">KAID</p></a></li>
+  <li><a href="https://namu.wiki/w/%EC%98%88%EA%B1%B0(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#EDC00F;">JÄGER</p></a></li>
+  <li><a href="https://namu.wiki/w/%EB%9D%BC%EC%9D%B4%EC%98%A8(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#EDC00F;">RION</p></a></li>
+  <li><a href="https://namu.wiki/w/%EB%8F%84%EA%B9%A8%EB%B9%84(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#B7B6B7;">DOGGABI</p></a></li>
+  <li><a href="https://namu.wiki/w/%EC%9E%90%EC%B9%BC(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#8842A9;">JACKAL</p></a></li>
+  <li><a href="https://namu.wiki/w/%EB%AF%B8%EB%9D%BC(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#8842A9;">MIRA</p></a></li>
+  <li><a href="https://namu.wiki/w/%EC%97%90%EC%9D%B4%EC%8A%A4(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#4BB198;">ACE</p></a></li>
+  <li><a href="https://namu.wiki/w/%EB%AA%A8%EC%A7%80(%EB%A0%88%EC%9D%B8%EB%B3%B4%EC%9A%B0%20%EC%8B%9D%EC%8A%A4%20%EC%8B%9C%EC%A6%88)"><p style="color:#E8336F;">MOZZIE</p></a></li>
 </body>
 
 </html>
