--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src=캡처.jpg" alt="Los Angeles" width="1100" height="500">
+      <img src=캡처.JPG" alt="Naver" width="1100" height="500">
       <div class="carousel-caption">
         <h3>Los Angeles</h3>
         <p>We had such a great time in LA!</p>
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="youtube.jpg" alt="Chicago" width="1100" height="500">
+      <img src="youtube.JPG" alt="Youtube" width="1100" height="500">
       <div class="carousel-caption">
         <h3>Chicago</h3>
         <p>Thank you, Chicago!</p>
       </div>   
     </div>
-    <div class="school.jpg" alt="New York" width="1100" height="500">
+    <div class="school.JPG" alt="Songdo school" width="1100" height="500">
       <div class="carousel-caption">
         <h3>New York</h3>
         <p>We love the Big Apple!</p>
