--- a/calender.html
+++ b/calender.html
@@ -102,7 +102,7 @@ function calendarBuilding(firstDate, lastDate) {
     }
 
     for (let i = 1; i < lastDate.getDate() + 1; i++) {
-      if(i == today.getDate()+1 &&count==0){
+      if(i == today.getDate() &&count==0){
         days.innerHTML += `<div class="daynum today"> ${i} <div>`;
 
       } else{
